Campana files cleaned with % authorship done